# tidycop

./: .gitignore  CHANGELOG.md  QUICK_START.md  README.md  openclaw-workspace-state.json  pyproject.toml  tidycop_analysis.md
docs/: PORTING_GUIDE.md  TODO.md  citymap-rollout-plan.md  handoff-2026-05-31-five-city-maps.md  seo-plan.md
registry/: cities.yaml
scripts/: check_no_downstream_cities.py  refresh_site.sh  us.citycrimemap.refresh.plist
tests/: test_arcgis.py  test_arcgis_live.py  test_ckan.py  test_ckan_live.py  test_classifier.py  test_cli.py  test_core.py  test_dedup.py  test_live_all_cities.py  test_registry.py  test_schema.py  test_socrata.py  test_socrata_live.py
tidycop/: __init__.py  classifier.py  cli.py  core.py  dedup.py  registry.py  schema.py
tidycop/platform/: __init__.py  arcgis.py  base.py  ckan.py  socrata.py
web/: .gitignore  README.md  registry_overlay.yaml
web/data/: _summary.json  baltimore.json  baltimore_hotspots.geojson  boston.json  boston_hotspots.geojson  chicago.json  chicago_hotspots.geojson  cincinnati.json  cincinnati_hotspots.geojson  cleveland.json  cleveland_hotspots.geojson  dallas.json  dallas_hotspots.geojson  denver.json  denver_hotspots.geojson  detroit.json  detroit_hotspots.geojson  gainesville.json  gainesville_hotspots.geojson  hartford.json  hartford_hotspots.geojson  houston.json  houston_hotspots.geojson  indianapolis.json  indianapolis_hotspots.geojson  kansas-city.json  kansas-city_hotspots.geojson  los-angeles.json  los-angeles_hotspots.geojson  minneapolis.json  minneapolis_hotspots.geojson  new-orleans.json  pittsburgh.json  pittsburgh_hotspots.geojson  providence.json  providence_hotspots.geojson  rochester.json  rochester_hotspots.geojson  san-francisco.json  san-francisco_hotspots.geojson  (+4 more)
web/pages/: about.html  baltimore.html  boston.html  chicago.html  cincinnati.html  cleveland.html  dallas.html  denver.html  detroit.html  faq.html  gainesville.html  hartford.html  houston.html  index.html  indianapolis.html  kansas-city.html  los-angeles.html  methodology.html  minneapolis.html  near-me.html  new-orleans.html  pittsburgh.html  predictions.html  providence.html  robots.txt  rochester.html  san-francisco.html  seattle.html  sitemap.xml  vercel.json  washington-dc.html
web/pages/baltimore/: abell.html  allendale.html  arlington.html  armistead-gardens.html  arson.html  assault.html  auchentoroly-parkwood.html  baltimore-highlands.html  baltimore-peninsula.html  barclay.html  bayview.html  beechfield.html  belair-edison.html  belvedere.html  berea.html  better-waverly.html  beverly-hills.html  biddle-street.html  bolton-hill.html  boyd-booth.html  brewers-hill.html  bridgeview-greenlawn.html  broadway-east.html  broening-manor.html  brooklyn.html  burglary.html  butchers-hill.html  canton-industrial-area.html  canton.html  (+167 more)
web/scripts/: check_pages_js.py  cities.py  fetch_data.py  generate_site.py  geocode.py  indexnow_ping.py  neighborhoods.py  predict_hotspots.py
web/tests/: test_geocode.py
(+1139 files in other folders)
