[tool.poetry]
name = "tidycop"
version = "0.3.0"
description = "City-agnostic interface for public police incident data"
authors = ["Colin Drane <colin@spotcrime.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/colinmac-boop/tidycop"
repository = "https://github.com/colinmac-boop/tidycop"
documentation = "https://github.com/colinmac-boop/tidycop#readme"
keywords = ["police", "crime", "open-data", "socrata", "arcgis", "ckan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/colinmac-boop/tidycop/issues"
"Changelog" = "https://github.com/colinmac-boop/tidycop/blob/main/CHANGELOG.md"
"Upstream R port" = "https://github.com/Steal-This-Code/tidycops"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
requests = "^2.31"
pyyaml = "^6.0"
python-dateutil = "^2.8"
pytz = "^2024.1"
geopandas = {version = "^0.14", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.4"
mypy = "^1.10"
# Installed so the in-tree classifier integration tests can exercise the
# soft-import seam end-to-end. Not a runtime dep of tidycop itself.
tidycop-spotcrime = "^0.1.0"

[tool.poetry.extras]
geo = ["geopandas"]

[tool.poetry.scripts]
tidycop = "tidycop.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
